컨트롤러 폼 완료

--- a/src/main/resources/templates/error1/ex40x.mustache
+++ b/src/main/resources/templates/error1/ex40x.mustache
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .err {
+            color: red;
+            background-color: blueviolet;
+            font-size: 500px;
+        }
+    </style>
 </head>
-<body>
-    {{list.0}}
-    <h1>tset 파일 연결 확인</h1>
-    {{#list}}
-    {{.}}
-    {{/list}}
-    
+
+<body class="err">
+    느아가
+
 </body>
+
 </html>
