회원가입 예외처리하기

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -37,7 +37,7 @@
         인서트 할때는 post 요청 enctype은 요청시 localhost:8080/board/save post로 요청됨
         title = 사용자입력값 & content=사용자값
     submit태그는 항상폼 안에 있어야한다.
-폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
+//! 폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
     <div class="card">
         <div class="card-body">
             <form action="/board/detail" method="post" enctype="application/x-www-form-urlencoded">
