--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -11,11 +11,11 @@
             <div class="card-header">로그인 해주세요</div>
             <div class="card-body">
                 <div class="mb-3 mt-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20">
                 </div>
                 <div class="mb-3">
                     <label for="pwd" class="form-label">Password:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
+                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password" required maxlength="20">
                 </div>
                 <button type="submit" class="btn btn-primary">로그인</button>
             </div>
