--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -1,34 +1,32 @@
 {{> /layout/header}}
 
+
+
 <div class="container p-5">
-    <form action="/join" method="post" enctype="application/x-www-form-urlencoded">
-        <!-- 폼태그는 기본적으로 Get요청
-        인서트 할때는 post 요청 enctype은 요청시 localhost:8080/join post로 요청됨
-        username = 사용자입력값&password=사용자값&사용자입력값
-    submit태그는 항상폼 안에 있어야한다.
-폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
-        <div class="card">
-            <div class="card-header">회원가입 해주세요</div>
-            <div class="card-body">
 
-                <div class="mb-3 mt-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" maxlength="20">
+    <!-- 요청을 하면 localhost:8080/join POST로 요청됨
+    username=사용자입력값&password=사용자값&email=사용자입력값 -->
+
+    <div class="card">
+        <div class="card-header"><b>회원가입을 해주세요</b></div>
+        <div class="card-body">
+            <form action="/join" method="POST" enctype="application/x-www-form-urlencoded">
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required
+                        maxlength="20">
                 </div>
                 <div class="mb-3">
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password" maxlength="20">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" required
+                        maxlength="20">
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" maxlength="20">
+                    <input type="email" class="form-control" placeholder="Enter email" name="email" required
+                        maxlength="20">
                 </div>
-                <div>
-                    <button type="submit" class="btn btn-primary">회원가입</button>
-                </div>
-
-            </div>
-
-
-
-    </form>
+                <button type="submit" class="btn btn-primary form-control">회원가입</button>
+            </form>
+        </div>
+    </div>
 </div>
 
 {{> /layout/footer}}
