--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -1,26 +1,23 @@
 {{> /layout/header}}
 
 <div class="container p-5">
-    <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
-        <!-- 폼태그는 기본적으로 Get요청
-        인서트 할때는 post 요청 enctype은 요청시 localhost:8080/login post로 요청됨
-        username = 사용자입력값 & password=사용자값
-    submit태그는 항상폼 안에 있어야한다.
-폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
-        <div class="card">
-            <div class="card-header">로그인 해주세요</div>
-            <div class="card-body">
-                <div class="mb-3 mt-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20">
-                </div>
-                <div class="mb-3">
-                    <label for="pwd" class="form-label">Password:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password" required maxlength="20">
-                </div>
-                <button type="submit" class="btn btn-primary">로그인</button>
-            </div>
 
-    </form>
+    <!-- 요청을 하면 localhost:8080/login POST로 요청됨
+    username=사용자입력값&password=사용자값 -->
+    <div class="card">
+        <div class="card-header"><b>로그인을 해주세요</b></div>
+        <div class="card-body">
+            <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20">
+                </div> 
+                <div class="mb-3">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20">
+                </div>
+                <button type="submit" class="btn btn-primary form-control">로그인</button>
+            </form>
+        </div>
+    </div>
 </div>
 
 {{> /layout/footer}}
