--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -16,7 +16,7 @@
     <!--disabled-->
     <ul class="pagination d-flex justify-content-center">
         <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prevPage}}">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="?page={{nextPage}}">Next</a></li>
+        <li class="page-item {{#last}}disabled{{/last}}"><a class="page-link" href="?page={{nextPage}}">Next</a></li>
     </ul>
 
 </div>
