아이디중복체크에이작스 개념

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -7,19 +7,25 @@
     submit태그는 항상폼 안에 있어야한다.
 폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
     <!-- 수정삭제버튼 -->
+    {{#pageOwner}}
     <div class="d-flex justify-content-end">
-        <button class="btn btn-warning me-1">수정</button>
-        <button class="btn btn-danger">삭제</button>
+        <a class="btn btn-warning me-1" href="/board/{{board.id}}/updateForm">수정</a>
+        <form action="/board/{{board.id}}/delete" method="post">
+            <button type="submit" class="btn btn-danger">삭제</button>
+        </form>
     </div>
+    {{/pageOwner}}
 
     <!-- 게시글내용 -->
+    {{#board}}
     <div>
-        <h2><b>제목자리</b></h2>
+        <h2><b>{{title}}</b></h2>
         <hr />
         <div class="m-4 p-2">
-            내용입니다
+            {{content}}
         </div>
     </div>
+    {{/board}}
 
     <!-- 댓글 -->
     <div class="card mt-3">
