--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -14,6 +14,7 @@
                 <div class="mb-3">
                     <input type="text" class="form-control" placeholder="Enter username" name="username" required
                         maxlength="20">
+                    <button type="button" onclick="check()">중복체크</button>
                 </div>
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password" required
@@ -29,4 +30,16 @@
     </div>
 </div>
 
+<script>
+    function check() {
+        fetch("/check?username=ssar1")
+            .then((resp) => { //반드시 덴에서 오류를 잡아야해 //응답의 값이 여기 데이터로 다들어오면 resp를 파싱하고 로직을 짜면돼 
+                if (resp.status != 200) {
+                    alert("유저네임이 중복되지 않았습니다. 사용하셔도 됩니다.");
+                } else {
+                    alert("유저네임이 중복되어 있습니다.");
+                }
+            }); //내부는 프로미스 객체로 실행된다. 잘되면 덴 잘안되면 캐치로 간다.
+    }
+</script>
 {{> /layout/footer}}
