--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -9,10 +9,10 @@
         <div class="card-body">
             <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20" value="ssar">
                 </div> 
                 <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20">
+                    <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20" value="1234">
                 </div>
                 <button type="submit" class="btn btn-primary form-control">로그인</button>
             </form>
