게시글목록넘김 - 조건유지

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -1,11 +1,7 @@
 {{> /layout/header}}
 
 <div class="container p-5">
-    <!-- 폼태그는 기본적으로 Get요청
-        인서트 할때는 post 요청 enctype은 요청시 localhost:8080/board/save post로 요청됨
-        title = 사용자입력값 & content=사용자값
-    submit태그는 항상폼 안에 있어야한다.
-폼태그의 역할 인풋에작성된걸 한번에 전송하려고. xwww는 왜쓰지? 이런거 면접에 다 나와-->
+
     <!-- 수정삭제버튼 -->
     {{#pageOwner}}
     <div class="d-flex justify-content-end">
@@ -51,18 +47,16 @@
                     <div class="px-1 me-1 bg-primary text-white rounded">{{replyUserUsername}}</div>
                     <div>{{replyComment}}</div>
                 </div>
-                 {{! {{#replyOwner}} 
+                {{#replyOwner}}
                 <form action="/reply/{{replyId}}/delete" method="post">
-                  <input type="hidden" name="boardId" value="{{boardId}}">
-                  <input type="hidden" name="replyUserId" value="{{replyUserId}}">
+                    <input type="hidden" name="boardId" value="{{boardId}}"/>
                     <button class="btn">🗑</button>
                 </form>
-                {{! {{/replyOwner}} 
+                {{/replyOwner}}
             </div>
             {{/replyId}}
             {{/dtos}}
         </div>
     </div>
 </div>
-
 {{> layout/footer}}
