--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -10,13 +10,16 @@
         <div class="card-body">
             <form action="/user/update" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" disabled>
+                    <input value="{{user.username}}" type="text" class="form-control" placeholder="Enter username"
+                        name="username" disabled>
                 </div>
                 <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Enter password" name="password">
+                    <input value="" type="password" class="form-control" placeholder="Enter password" name="password"
+                        required>
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" disabled>
+                    <input value="{{user.email}}" type="email" class="form-control" placeholder="Enter email"
+                        name="email" disabled>
                 </div>
                 <button type="submit" class="btn btn-primary form-control">회원가입수정</button>
             </form>
