--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,25 +1,32 @@
 {{> /layout/header}}
 
-
 <div class="container p-5">
 
+    <div class="mb-2 d-flex justify-content-end">
+        <form class="d-flex" action="/" method="get">
+            <input class="form-control me-2" type="text" name="keyword" placeholder="Search" required>
+            <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+    </div>
+
     {{#boardList}}
-        <div class="card mb-3">
-            <div class="card-body">
-                <h4 class="card-title mb-3">{{title}}</h4>
-                <a href="/board/{{id}}" class="btn btn-primary">상세보기</a>
-            </div>
+    <div class="card mb-3">
+        <div class="card-body">
+            <h4 class="card-title mb-3">{{title}}</h4>
+            <a href="/board/{{id}}" class="btn btn-primary">상세보기</a>
         </div>
+    </div>
     {{/boardList}}
 
 
     <!--disabled-->
     <ul class="pagination d-flex justify-content-center">
-        <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prevPage}}">Previous</a></li>
-        <li class="page-item {{#last}}disabled{{/last}}"><a class="page-link" href="?page={{nextPage}}">Next</a></li>
+        <li class="page-item {{#first}}disabled{{/first}}"><a class="page-link" href="?page={{prevPage}}{{#keyword}}&keyword={{keyword}}{{/keyword}}">Previous</a>
+        </li>
+        <li class="page-item {{#last}}disabled{{/last}}"><a class="page-link" href="?page={{nextPage}}{{#keyword}}&keyword={{keyword}}{{/keyword}}">Next</a></li>
     </ul>
 
 </div>
 
-{{> /layout/footer}}
 
+{{> /layout/footer}}
