--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,12 +2,13 @@
 
 <div class="container p-5">
 
-    <div class="mb-2 d-flex justify-content-end">
-        <form class="d-flex" action="/" method="get">
-            <input class="form-control me-2" type="text" name="keyword" placeholder="Search" required>
-            <button class="btn btn-primary" type="submit">Search</button>
-        </form>
-    </div>
+<div class="mb-2 d-flex justify-content-end">
+    <form class="d-flex" action="/" method="get">
+        <input class="form-control me-2" type="text" name="keyword" placeholder="Search" 
+               pattern=".*\S+.*" title="공백은 입력하실 수 없습니다." required>
+        <button class="btn btn-primary" type="submit">Search</button>
+    </form>
+</div>
 
     {{#boardList}}
     <div class="card mb-3">
